PR #15 update and fix bugs.