@@ -83,11 +83,9 @@ public class ScoreScreen extends Screen {
 		this.achievementManager = achievementManager;
 
 		try {
-			this.highScores = Core.getFileManager().loadHighScores(true);
-			if (highScores.size() < MAX_HIGH_SCORE_NUM
-					|| highScores.get(highScores.size() - 1).getScore() < this.score)
+			this.highScores = Core.getFileManager().loadHighScores();
+			if (highScores.getLast().getScore() < this.score)
 				this.isNewRecord = true;
-
 		} catch (IOException e) {
 			logger.warning("Couldn't load high scores!");
 		}
@@ -165,11 +163,9 @@ public class ScoreScreen extends Screen {
 		String mode = (gameState != null && gameState.isCoop()) ? "2P" : "1P";
 		highScores.add(new Score(new String(this.name), this.gameState, mode)); // update mode
 		Collections.sort(highScores);
-		if (highScores.size() > MAX_HIGH_SCORE_NUM)
-			highScores.remove(highScores.size() - 1);
 
-		try {
-			Core.getFileManager().saveHighScores(highScores, true);
+        try {
+			Core.getFileManager().saveHighScores(highScores);
 		} catch (IOException e) {
 			logger.warning("Couldn't load high scores!");
 		}
